--- a/terraPorta_UI/package.json
+++ b/terraPorta_UI/package.json
@@ -17,26 +17,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "5.2.3",
-    "@angular/cdk": "^5.2.0",
+    "@angular/cdk": "^5.2.5",
     "@angular/common": "5.2.3",
     "@angular/compiler": "5.2.3",
     "@angular/core": "5.2.3",
     "@angular/forms": "5.2.3",
     "@angular/http": "5.2.3",
-    "@angular/material": "^5.2.0",
+    "@angular/material": "^5.2.5",
     "@angular/platform-browser": "5.2.3",
     "@angular/platform-browser-dynamic": "5.2.3",
     "@angular/router": "5.2.3",
     "@angular/upgrade": "5.2.3",
     "@auth0/angular-jwt": "^1.2.0",
-    "@ng-select/ng-select": "^1.5.2",
-    "@types/googlemaps": "^3.30.16",
-    "ajv": "^6.0.0",
-    "angular-froala-wysiwyg": "^2.9.1-1",
+    "@ng-select/ng-select": "^1.6.3",
+    "@types/googlemaps": "^3.37.7",
+    "ajv": "^6.10.2",
+    "angular-froala-wysiwyg": "^2.9.6",
     "angular-markdown-editor": "^2.0.2",
     "bootstrap": "4.0.0-beta.2",
     "bootstrap-markdown": "^2.10.0",
-    "chart.js": "^2.7.3",
+    "chart.js": "^2.8.0",
     "core-js": "2.5.3",
     "flag-icon-css": "2.9.0",
     "font-awesome": "^4.7.0",
@@ -44,12 +44,12 @@
     "ng2-charts": "1.6.0",
     "ng2-markdown-to-html": "^1.3.2",
     "ngx-bootstrap": "2.0.2",
-    "ngx-markdown": "^1.5.2",
+    "ngx-markdown": "^1.6.0",
     "ngx-stripe": "^0.8.2",
     "popper": "^1.0.1",
     "primeng": "^5.2.7",
-    "prismjs": "^1.13.0",
-    "quill": "^1.3.6",
+    "prismjs": "^1.17.1",
+    "quill": "^1.3.7",
     "rxjs": "5.5.6",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
@@ -71,7 +71,7 @@
     "karma-coverage-istanbul-reporter": "1.4.1",
     "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "^5.4.1",
+    "protractor": "^5.4.2",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
     "typescript": "2.6.2"
