particlesjs package added

--- a/terraPorta_UI/package.json
+++ b/terraPorta_UI/package.json
@@ -47,6 +47,7 @@
     "ngx-markdown": "^1.6.0",
     "ngx-stripe": "^0.8.2",
     "particles.js": "^2.0.0",
+    "particlesjs": "^2.2.3",
     "popper": "^1.0.1",
     "primeng": "^5.2.7",
     "prismjs": "^1.17.1",
